<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_pizza"
        android:title="@string/menu"
        app:showAsAction="always" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        app:showAsAction="always" />
    <item
        android:id="@+id/navigation_contact"
        android:icon="@drawable/ic_location"
        android:title="@string/contact"
        app:showAsAction="always" />
    <item
        android:id="@id/navigation_basket"
        android:icon="@drawable/ic_basket"
        android:title="@string/basket"
        app:showAsAction="always" />


</menu>