<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/splashFragment">

    <fragment
        android:id="@+id/navigation_home"
        android:name="islom.din.dodo_ilmhona_proskills.QA.fragment.screens.HomeFragment"
        android:label="@string/menu"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/navigate_to_adress_dostavki_fragment"
            app:destination="@id/adressDostavkiFragment" />
        <argument android:name="dostavka_location"
            app:argType="string"
            app:nullable="true" />
        <action
            android:id="@+id/action_navigation_home_to_zalFragment"
            app:destination="@id/zalFragment" />
        <argument
            android:name="zal_location"
            app:argType="string"
            app:nullable="true" />
        <action
            android:id="@+id/action_navigation_home_to_comboFragment2"
            app:destination="@id/comboFragment2" />
    </fragment>
    <fragment
        android:id="@+id/navigation_profile"
        android:name="islom.din.dodo_ilmhona_proskills.QA.fragment.screens.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile"/>
    <fragment
        android:id="@+id/navigation_contact"
        android:name="islom.din.dodo_ilmhona_proskills.QA.fragment.screens.ContactFragment"
        android:label="@string/contact"
        tools:layout="@layout/fragment_contact"/>
    <fragment
        android:id="@+id/navigation_basket"
        android:name="islom.din.dodo_ilmhona_proskills.QA.fragment.screens.BasketFragment"
        android:label="@string/basket"
        tools:layout="@layout/fragment_basket"/>
    <fragment
        android:id="@+id/adressDostavkiFragment"
        android:name="islom.din.dodo_ilmhona_proskills.QA.fragment.AdressDostavkiFragment"
        android:label="fragment_adress_dostavki"
        tools:layout="@layout/fragment_adress_dostavki" >
        <action
            android:id="@+id/navate_to_home_fragment_from_adress"
            app:destination="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/zalFragment"
        android:name="islom.din.dodo_ilmhona_proskills.QA.fragment.ZalFragment"
        android:label="ZalFragment" >
        <action
            android:id="@+id/action_zalFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/splashFragment"
        android:name="islom.din.dodo_ilmhona_proskills.QA.fragment.SplashFragment"
        android:label="fragment_splash"
        tools:layout="@layout/fragment_splash" >
        <action
            android:id="@+id/action_splashFragment_to_navigation_home"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/comboFragment2"
        android:name="islom.din.dodo_ilmhona_proskills.ComboFragment"
        android:label="fragment_combo"
        tools:layout="@layout/fragment_combo" >
        <action
            android:id="@+id/action_comboFragment2_to_fragmetSelectPizza"
            app:destination="@id/fragmetSelectPizza" />
        <argument
            android:name="pizza"
            app:argType="islom.din.dodo_ilmhona_proskills.QA.data.Pizza"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/fragmetSelectPizza"
        android:name="islom.din.dodo_ilmhona_proskills.FragmetSelectPizza"
        android:label="fragment_fragmet_select_pizza"
        tools:layout="@layout/fragment_fragmet_select_pizza" >
        <action
            android:id="@+id/action_fragmetSelectPizza_to_comboFragment2"
            app:destination="@id/comboFragment2" />
        <argument
            android:name="pizza"
            app:argType="islom.din.dodo_ilmhona_proskills.model.Pizza" />
    </fragment>
</navigation>