<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.screens.HomeFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/low_mp"
            android:backgroundTint="@color/grey_darker"
            android:padding="30dp"
            app:contentPadding="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_scrollFlags="scroll">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.button.MaterialButtonToggleGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:weightSum="2">


                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/na_dostavku"
                        style="@style/ThemeOverlay.Material3.Button.ElevatedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/medium_mp"
                        android:layout_weight="1"
                        android:text="@string/na_dostavku"
                        android:textAllCaps="false" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/v_zale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="@color/grey"
                        android:text="@string/v_zale"
                        android:textAllCaps="false" />
                </com.google.android.material.button.MaterialButtonToggleGroup>


                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/super_low_mp" />

                <TextView
                    android:layout_marginVertical="@dimen/super_low_mp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/vibor_adres_dostavki"
                    android:textColor="@color/secondaryTextColor" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            app:layout_scrollFlags="scroll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <include layout="@layout/stories_item" />

            <include layout="@layout/stories_item" />

            <include layout="@layout/stories_item" />

            <include layout="@layout/stories_item" />

        </LinearLayout>

        <TextView
            app:layout_scrollFlags="scroll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_mp"
            android:text="Выгодно и вкусно"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_marginVertical="@dimen/super_low_mp"
            app:layout_scrollFlags="scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include layout="@layout/recomendation_item" />

            <include layout="@layout/recomendation_item" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/category_rv"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="horizontal"
            tools:listitem="@layout/category_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        tools:listitem="@layout/pizza_item"
        android:id="@+id/pizza_rv"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_blank_fragment"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>